k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-app
  namespace: cv-app
  labels:
    app: cv-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cv-app
  template:
    metadata:
      labels:
        app: cv-app
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: app
          image: ghcr.io/maksym-kravchenko/cv-web:0.1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
