k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-app
  namespace: cv-app
  labels:
    app: cv-app
spec:
  type: ClusterIP
  selector:
    app: cv-app
  ports:
    - port: 80
      targetPort: http
      name: http
